--- a/src/pages/about/style.scss
+++ b/src/pages/about/style.scss
@@ -34,6 +34,12 @@
 
         .about__gif {
             flex: 1;
+
+            @media (max-width: $mobile) {
+                img {
+                    width: 80%;
+                }
+            }
         }
     }
 
