--- a/src/pages/home/style.scss
+++ b/src/pages/home/style.scss
@@ -28,6 +28,10 @@
         box-shadow: 0px 0px 130px 130px $bg-gradient-2;
         background-color: $bg-gradient-2;
         animation: box-shadow 5s infinite;
+
+        @media (max-width: $mobile) {
+            font-size: 3rem;
+        }
     }
 
     &__occupation {
@@ -92,6 +96,12 @@
                 flex: 1;
                 text-align: center;
                 padding-top: 67px;
+
+                @media (max-width: $mobile) {
+                    img {
+                        width: 80%;
+                    }
+                }
             }
         }
     }
