--- a/src/pages/projects/style.scss
+++ b/src/pages/projects/style.scss
@@ -13,6 +13,7 @@
                 color: $text-color-default;
                 border-radius: 5px;
                 box-shadow: 0px 0px 10px 0px $bg-gradient-1;
+                overflow-y: scroll;
 
                 max-width: 400px;
                 height: 381px;
@@ -20,6 +21,12 @@
 
                 .links {
                     @include flex(center, space-between);
+
+                    @media (max-width: $mobile) {
+                        flex-direction: column;
+                        justify-content: center;
+                    }
+
                     gap: 10px;
                     font-size: 2rem;
                 }
@@ -28,6 +35,10 @@
                     width: 284px;
                     height: 142px;
                     border: 2px solid $bg-gradient-2;
+
+                    @media (max-width: 350px) {
+                        width: 200px;
+                    }
 
                     img {
                         width: 100%;
